--- a/src/GLideNUI/configDialog.ui
+++ b/src/GLideNUI/configDialog.ui
@@ -1463,7 +1463,7 @@
                 <number>0</number>
                </property>
                <item>
-                <widget class="QLabel" name="fixTexrectLabel">
+                <widget class="QLabel" name="fixBlackLinesLabel">
                  <property name="text">
                   <string>Fix black lines between 2D elements:</string>
                  </property>
