--- a/src/GLideNUI/configDialog.ui
+++ b/src/GLideNUI/configDialog.ui
@@ -103,6 +103,9 @@
            </item>
            <item>
             <widget class="QFrame" name="windowedResolutionFrame">
+             <property name="toolTip">
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This option selects the resolution for windowed mode. You also may select &lt;span style=&quot; font-weight:600;&quot;&gt;Custom&lt;/span&gt; and enter your own window size.&lt;/p&gt;&lt;p&gt;[Recommended: &lt;span style=&quot; font-style:italic;&quot;&gt;640 x 480, 800 x 600, 1024 x 768, 1280 x 960&lt;/span&gt;]&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             </property>
              <layout class="QVBoxLayout" name="verticalLayout_24">
               <property name="spacing">
                <number>5</number>
@@ -121,28 +124,18 @@
               </property>
               <item>
                <widget class="QLabel" name="windowedResolutionLabel">
-                <property name="toolTip">
-                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This option selects the resolution for windowed mode. You also may select &lt;span style=&quot; font-weight:600;&quot;&gt;Custom&lt;/span&gt; and enter your own window size.&lt;/p&gt;&lt;p&gt;[Recommended: &lt;span style=&quot; font-style:italic;&quot;&gt;640 x 480, 800 x 600, 1024 x 768, 1280 x 960&lt;/span&gt;]&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                </property>
                 <property name="text">
                  <string>Windowed resolution:</string>
                 </property>
                </widget>
               </item>
               <item>
-               <widget class="QComboBox" name="windowedResolutionComboBox">
-                <property name="toolTip">
-                 <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;This option selects the resolution for windowed mode. You also may select &lt;span style=&quot; font-weight:600;&quot;&gt;Custom&lt;/span&gt; and enter your own window size.&lt;/p&gt;&lt;p&gt;[Recommended: &lt;span style=&quot; font-style:italic;&quot;&gt;640 x 480, 800 x 600, 1024 x 768, 1280 x 960&lt;/span&gt;]&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                </property>
-               </widget>
+               <widget class="QComboBox" name="windowedResolutionComboBox"/>
               </item>
               <item>
                <layout class="QHBoxLayout" name="horizontalLayout_12">
                 <item>
                  <widget class="QLabel" name="windowWidthLabel">
-                  <property name="toolTip">
-                   <string>Custom windowed resolution width</string>
-                  </property>
                   <property name="text">
                    <string>W:</string>
                   </property>
@@ -155,9 +148,6 @@
                     <width>52</width>
                     <height>0</height>
                    </size>
-                  </property>
-                  <property name="toolTip">
-                   <string>Custom windowed resolution width</string>
                   </property>
                   <property name="minimum">
                    <number>320</number>
@@ -188,9 +178,6 @@
                 </item>
                 <item>
                  <widget class="QLabel" name="windowHeightLabel">
-                  <property name="toolTip">
-                   <string>Custom windowed resolution height</string>
-                  </property>
                   <property name="text">
                    <string>H:</string>
                   </property>
@@ -203,9 +190,6 @@
                     <width>52</width>
                     <height>0</height>
                    </size>
-                  </property>
-                  <property name="toolTip">
-                   <string>Custom windowed resolution height</string>
                   </property>
                   <property name="minimum">
                    <number>240</number>
@@ -2233,7 +2217,7 @@
               </widget>
              </item>
              <item>
-              <widget class="QFrame" name="frame">
+              <widget class="QFrame" name="texturePackOptionsFrame">
                <layout class="QVBoxLayout" name="verticalLayout_42">
                 <property name="spacing">
                  <number>18</number>
@@ -2308,7 +2292,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QFrame" name="texPackOptionsFrame">
+                 <widget class="QFrame" name="texPackCheckBoxesFrame">
                   <layout class="QVBoxLayout" name="verticalLayout_38">
                    <property name="spacing">
                     <number>4</number>
@@ -4137,7 +4121,7 @@
   <connection>
    <sender>texturePackOnCheckBox</sender>
    <signal>toggled(bool)</signal>
-   <receiver>frame</receiver>
+   <receiver>texturePackOptionsFrame</receiver>
    <slot>setEnabled(bool)</slot>
    <hints>
     <hint type="sourcelabel">
@@ -4232,11 +4216,11 @@
   </connection>
  </connections>
  <buttongroups>
-  <buttongroup name="screenshotButtonGroup"/>
+  <buttongroup name="factorButtonGroup"/>
   <buttongroup name="aspectButtonGroup"/>
+  <buttongroup name="fixTexrectCoordsButtonGroup"/>
+  <buttongroup name="screenshotButtonGroup"/>
   <buttongroup name="osdButtonGroup"/>
   <buttongroup name="bloomBlendModeButtonGroup"/>
-  <buttongroup name="factorButtonGroup"/>
-  <buttongroup name="fixTexrectCoordsButtonGroup"/>
  </buttongroups>
 </ui>
