--- a/src/GLideNUI/AboutDialog.ui
+++ b/src/GLideNUI/AboutDialog.ui
@@ -9,7 +9,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>518</width>
+    <width>558</width>
     <height>544</height>
    </rect>
   </property>
@@ -34,6 +34,9 @@
     <number>12</number>
    </property>
    <property name="rightMargin">
+    <number>18</number>
+   </property>
+   <property name="bottomMargin">
     <number>18</number>
    </property>
    <item>
@@ -289,7 +292,7 @@
         <number>18</number>
        </property>
        <property name="bottomMargin">
-        <number>8</number>
+        <number>10</number>
        </property>
        <item>
         <widget class="QGroupBox" name="aboutCredits">
@@ -520,6 +523,14 @@
              <bool>false</bool>
             </property>
             <widget class="QWidget" name="scrollAreaWidgetContents">
+             <property name="geometry">
+              <rect>
+               <x>0</x>
+               <y>0</y>
+               <width>166</width>
+               <height>2006</height>
+              </rect>
+             </property>
              <layout class="QVBoxLayout" name="verticalLayout_8">
               <property name="leftMargin">
                <number>0</number>
