--- a/src/GLideNUI/AboutDialog.ui
+++ b/src/GLideNUI/AboutDialog.ui
@@ -10,7 +10,7 @@
     <x>0</x>
     <y>0</y>
     <width>339</width>
-    <height>366</height>
+    <height>378</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -75,9 +75,6 @@
        <height>275</height>
       </size>
      </property>
-     <property name="currentIndex">
-      <number>1</number>
-     </property>
      <widget class="QWidget" name="tab_5">
       <attribute name="title">
        <string>About</string>
@@ -97,6 +94,12 @@
         <spacer name="verticalSpacer_4">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>0</width>
+           <height>0</height>
+          </size>
          </property>
         </spacer>
        </item>
@@ -208,7 +211,7 @@
           <property name="geometry">
            <rect>
             <x>0</x>
-            <y>-127</y>
+            <y>0</y>
             <width>278</width>
             <height>356</height>
            </rect>
