--- a/src/GLideNUI/icon.qrc
+++ b/src/GLideNUI/icon.qrc
@@ -1,5 +1,16 @@
 <RCC>
     <qresource prefix="/">
         <file>Icon.ico</file>
+        <file>Icon-48.ico</file>
+        <file>Warning.ico</file>
+        <file>Info.ico</file>
+        <file>Up.ico</file>
+        <file>Right.ico</file>
+        <file>Down.ico</file>
+        <file>Left.ico</file>
+        <file>TopLeft.ico</file>
+        <file>TopRight.ico</file>
+        <file>BottomRight.ico</file>
+        <file>BottomLeft.ico</file>
     </qresource>
 </RCC>
